# DeepResearchRAG

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.en.md  README.md  TODO.md
backend/: .dockerignore  .env.dev  .env.prod  Dockerfile  Makefile  entrypoint.sh  gunicorn.conf.py  pyproject.toml
backend/configs/: .env.example
backend/data/: eval_financebench.json  eval_tech_queries.json
backend/migrations/: 001_add_research_current_step.sql  002_add_research_memory_quality.sql  003_add_ingest_tasks.sql  004_add_feedbacks.sql  schema.sql
backend/scripts/: build_financebench_eval.py  evaluate_e2e.py  evaluate_retrieval.py  generate_eval_from_milvus.py  import_rss_pipeline.py  init_industry_collection.py  init_postgres.py  seed_data.py  seed_financebench.py
backend/src/agent/: __init__.py  graph.py  nodes.py  research_graph.py  research_memory.py  research_state.py  research_tools.py  runtime.py  schemas.py  state.py  templates.py
backend/src/api/: __init__.py  app.py  auth.py  models.py  research.py  routes.py
backend/src/auth/: __init__.py  jwt_handler.py  password.py
backend/src/cli/: __init__.py  main.py
backend/src/core/: __init__.py  audit.py  cache.py  config.py  errors.py  logging.py  metrics.py  middleware.py  tracing.py
backend/tests/: conftest.py  test_agent_orchestration.py  test_auth_flow.py  test_evaluate_retrieval.py  test_feishu.py  test_ingestion_pipeline.py  test_observability_p2.py  test_production_hardening.py  test_production_readiness_p1.py  test_query_endpoint.py  test_research_graph_orchestration.py  test_schema_migrations.py  test_security_middleware.py
(+95 files in other folders)
