[project]
name = "rag-news-intelligence"
version = "0.1.0"
description = "RAG News Intelligence — multi-source news RAG system with LangGraph Agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # FastAPI & server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",

    # LangChain & LangGraph
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",

    # Milvus
    "pymilvus>=2.4.0",

    # LLM clients
    "openai>=1.0.0",

    # Data processing
    "datasets>=2.20.0",
    "feedparser>=6.0.0",

    # Embedding
    " volcengine-python-sdk>=2.0.0",

    # Observability
    "structlog>=24.0.0",
    "tenacity>=8.0.0",

    # Utils
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "sse-starlette>=2.0.0",

    # Auth
    "PyJWT>=2.8.0",
    "bcrypt>=4.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]